--- a/css/media.css
+++ b/css/media.css
@@ -1,160 +1,1 @@
-@media only screen and (max-width: 1440px) {
-  main header .Nav-wrp nav .nav-item ul li a {
-    font-size: 1em;
-  }
-  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -58px;
-    top: -215px;
-  }
-  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -62px;
-    bottom: -213px;
-  }
-  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
-    width: 215px;
-    height: 215px;
-  }
-  main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -64px !important;
-    top: -60px !important;
-  }
-  main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -67px !important;
-    bottom: -61px !important;
-  }
-  main header .Nav-wrp nav .nav-item ul .drop_down {
-    top: 78px;
-    left: 36%;
-  }
-  main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 a {
-    padding: 1rem 2rem;
-    margin: 1.4rem 0 1.4rem;
-  }
-  main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure img {
-    max-width: 75%;
-  }
-}
-
-@media only screen and (max-width: 1300px) {
-  main header .Nav-wrp nav .nav-item ul li a {
-    font-size: 15px;
-  }
-  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -39px;
-    top: -215px;
-  }
-  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -41px;
-    bottom: -213px;
-  }
-  main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -42px !important;
-    top: -60px !important;
-  }
-  main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -45px !important;
-    bottom: -61px !important;
-  }
-  main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure img {
-    max-width: 94%;
-  }
-  main header .Nav-wrp nav .nav-item {
-    width: 65%;
-    padding: 1rem 0;
-  }
-}
-
-@media only screen and (max-width: 1200px) {
-  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
-    width: 185px;
-    height: 185px;
-  }
-  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -17px;
-    top: -200px;
-  }
-  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::after {
-    width: 185px;
-    height: 185px;
-  }
-  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -24px;
-    bottom: -208px;
-  }
-  main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -22px !important;
-    top: -54px !important;
-  }
-  main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -27px !important;
-    bottom: -56px !important;
-  }
-  main .Service_wrapper .Service_content .Grid__hvr0001:hover .Hvr_cnt::after {
-    width: 100px !important;
-    height: 100px !important;
-  }
-  main .Service_wrapper .Service_content .Grid__hvr0001:hover .Hvr_cnt::before {
-    width: 100px !important;
-    height: 100px !important;
-  }
-  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .bottom_Bar h2 {
-    font-size: 1.1em;
-  }
-  main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure img {
-    max-width: 100%;
-  }
-  main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 h2 {
-    font-size: 3em;
-  }
-  main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 p {
-    font-size: 1em;
-  }
-  main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 a {
-    padding: 1rem 2rem;
-    font-size: 1.2em;
-  }
-  main .Testimonial_Wrapper .Testimonial_Content ul .Tst_cmn02 {
-    width: 38%;
-    padding: 1rem 1rem;
-  }
-  main .Testimonial_Wrapper .Testimonial_Content ul .Tst_cmn02 p {
-    font-size: 15px;
-    padding: 0 0 1rem 1.1rem;
-  }
-  main .Testimonial_Wrapper .Testimonial_heading h2 {
-    font-size: 2em;
-  }
-  main .Testimonial_Wrapper .Testimonial_Content ul .Tst_cmn02 figure {
-    width: 130px;
-    height: 130px;
-  }
-  main .About_Wrapper .About_Content .Abt_cmn01 h2 {
-    font-size: 2.2em;
-  }
-  main .About_Wrapper .About_Content .Abt_cmn01 p {
-    font-size: 1em;
-  }
-  main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child h1 {
-    font-size: 2.7em;
-  }
-  main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
-    font-size: 1.1em;
-  }
-  main .Banner_Wrapper .banner-child .owl-next, main .Banner_Wrapper .banner-child .owl-prev {
-    right: 23px;
-    font-size: 5em !important;
-  }
-  main .Banner_Wrapper .banner-child .owl-prev {
-    left: 20px;
-  }
-  main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child a {
-    font-size: 1.1em;
-  }
-  main .Appointment_Wrapper {
-    padding: 5.5rem 0;
-  }
-  main footer .footer_content .Ft_cmn01 h2 {
-    font-size: 1.4em;
-  }
-}
-/*# sourceMappingURL=media.css.map */
+/* No CSS *//*# sourceMappingURL=media.css.map */
