--- a/css/style.scss
+++ b/css/style.scss
@@ -151,29 +151,38 @@
                                 // &:hover{
                                 //     .drop_down{
                                 //         display: block;
-                                //         transition: $transition;
+                                //         // transition: $transition;
                                 //     }
                                 // }
                             }
-                            .drop_down{
-                                position: absolute;
-                                top: 89px;
-                                left: 36%;
-                                width: 281px;
-                                background: #f73624a6;
-                                justify-content: flex-start;
-                                display:none;
-                                li{
-                                    padding: 1rem 0;
-                                    margin: 0 0;
+                            .drop3{
+                                .list{
                                     transition: $transition;
-                                    width: 100%;
-                                    border-bottom: 1px solid #ffffff78;
                                     &:hover{
                                         background: #f73624;
                                         transition: $transition;
                                         padding-left: .5rem;  
                                     }
+                                }
+                            }
+                            .drop_down{
+                                position: absolute;
+                                top: 87px;
+                                left: 41%;
+                                width: 281px;
+                                background: #d14336eb;//#f73624e3;//#f73624a6;
+                                justify-content: flex-start;
+                                display:none;
+                                border-bottom: 3px solid #ffffffa8;
+                                border-bottom-right-radius: 5px;
+                                border-bottom-left-radius: 5px; 
+                                .list{
+                                    padding: 1rem 0;
+                                    margin: 0 0;
+                                    transition: $transition;
+                                    width: 100%;
+                                    text-transform: $cap;
+                                    border-bottom: 1px solid #ffffff78; 
                                   a{
                                       color: #fff;
                                       padding: 0 0 0 1rem;
@@ -182,12 +191,75 @@
                                   }
                                 }
                               }
+                              .drop2{
+                                  //left: 0%!important;
+                                  width: 100%!important;
+                                  padding: 1rem 1rem;
+                                  display: none;
+                                  left: -63% !important;
+                                  width: 1500px !important;
+                                  .drop2_sub_wrp{
+                                    @include flex;
+                                    justify-content:flex-start;
+                                    align-items: inherit;
+                                    .list{
+                                        width: 18%;//23%;
+                                        margin: .5rem .9rem;
+                                        border-bottom: inherit!important;
+                                        .heading-btn{
+                                            @include flex;
+                                            justify-content: $between;
+                                            padding: 0 .5rem;
+                                            span{
+                                                color: $white;
+                                                font-size: 1.2em;
+                                                font-weight: bold;
+                                            }
+                                        }
+                                        h3{
+                                            font-size: 15px;
+                                            text-transform: $upper;
+                                            letter-spacing: 1px;
+                                            word-spacing: 2px;
+                                            color: $white;
+                                            // padding: 0 0 1rem;
+                                            font-weight: bold;
+                                        }
+                                        ul{
+                                            justify-content: flex-start;
+                                            align-items: inherit;
+                                            li{
+                                                width: 100%;
+                                                margin: 0 0rem !important;
+                                                padding: .9rem 0 .9rem;
+                                                border-bottom: 1px dotted;
+                                                border-color: #ffffffa3;
+                                                display: block;
+                                                transition: $transition; 
+                                                a{
+                                                padding: 0 0 0 0rem!important;
+                                                font-size: 14px;
+                                                font-family: 'RalewayRegular';
+                                                text-transform: $cap;
+                                                cursor: pointer;
+                                                &:hover{
+                                                    transition: $transition;
+                                                    padding-left: .5rem;
+                                                    color: #000!important;
+                                                    display: inline-block;
+                                                }
+                                                }
+                                            }
+                                        }
+                                    }
+                                 }
+                              }
                         }
                     }
                 }
             }
         }
-
+    
         //-----banner------//
         .Banner_Wrapper{
             .banner-child{
@@ -344,10 +416,19 @@
        .Service_content{
           .Grid_wrp{
             display: grid;
-            grid-template-columns: auto auto auto;
+            // grid-template-columns: auto auto auto;
+            grid-template-columns: repeat(auto-fill, minmax(7, 1fr));
             grid-gap: 10px;
             padding: 10px;
-             grid-template-columns: auto auto auto;
+            //  grid-template-columns: auto auto auto; 
+            // grid-template-columns: repeat(8, 1fr);
+            // gap: 10px;
+            // grid-auto-rows: 100px;
+            grid-template-areas:
+              "a a b b  c c"
+              "a a b b  c c"
+              "a a d d  e e "
+              "a a d d  e e ";
               .Grid-item_cmn01{
                   width: 100%;
                 //   height: 300px;
@@ -393,8 +474,8 @@
               } 
           }
           .Grid-item1{
-            grid-row-start: 1;
-            grid-row-end: 5;
+            // grid-row-start: 1;   grid-row-end: 5;
+            grid-area: a; 
             background: url(../image/grid1.png)no-repeat;
             background-size: 100% 100%;
             background-position: center;
@@ -405,19 +486,25 @@
             background-size: 100% 100%;
             background-position: center;
             height: 300px;
+            grid-area: b;
         }
         .Grid-item3 { background: url(../image/grid3.png)no-repeat;
             background-size: 100% 100%;
             background-position: center;
-            height: 300px;    }
+            height: 300px;   
+            grid-area: c;
+         }
         .Grid-item4 { background: url(../image/grid4.png)no-repeat;
             background-size: 100% 100%;
             background-position: left;
-            height: 300px;    }
+            height: 300px;   
+            grid-area: d;
+         }
         .Grid-item5 {  background: url(../image/grid5.png)no-repeat;
             background-size: 100% 100%;
             background-position: left;
             height: 300px;
+            grid-area: e;
          }
          .Grid__hvr0001{
              @include grid-Hvr2;
@@ -1118,7 +1205,7 @@
     }
     .Grid_wrp{
         // grid-template-columns:auto auto auto auto auto!important 
-       grid-template-rows: auto 1fr auto;
+        grid-template-rows: auto 1fr auto;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr))!important;
 
         .Grid-item1{
@@ -1360,7 +1447,38 @@
         }
     }
 }
+
+
+// ---------------------------hair----care------page----------
+
+// --------------*****************hair-----care----------------//
+
+.HairCare_Wrapper{
+    .Beauty-banner{
+        &::before{
+            display: none!important;
+        }
+        background: inherit;
+    }
+    .HairCare-Banner{
+        background: url(../image/haicare-banner.png)no-repeat;
+        width: 100%;
+        background-size: 100% 100%;
+        background-position: center;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
 .main-bar{
     display: none;
 }
-@import 'media';
+@import 'media'; 
