--- a/css/style.scss
+++ b/css/style.scss
@@ -117,7 +117,7 @@
                     .nav-item{
                         width: 60%;
                         padding: 1rem 0;
-                        ul{
+                        .Unorder_wrp{
                             @include flex;
                             justify-content: $end;
                             position: relative;
@@ -132,7 +132,7 @@
                                     word-spacing: 1px;
                                     letter-spacing: 1px;
                                     transition: $transition;
-                                    padding: 0 0 .4rem;
+                                    padding: 0 0 .4rem 0;
                                     &:hover{
                                         color: $red;
                                         transition: $transition;
@@ -147,119 +147,223 @@
                                 }
                             }
                             .hair-care{
-                                position: relative;
-                                // &:hover{
-                                //     .drop_down{
-                                //         display: block;
-                                //         // transition: $transition;
-                                //     }
-                                // }
+                                position: relative; 
                             }
-                            .drop3{
-                                .list{
-                                    transition: $transition;
-                                    &:hover{
-                                        background: #f73624;
-                                        transition: $transition;
-                                        padding-left: .5rem;  
-                                    }
-                                }
+                            // .drop3{
+                            //     .list{
+                            //         transition: $transition;
+                            //         &:hover{
+                            //             background: #f73624;
+                            //             transition: $transition;
+                            //             padding-left: .5rem;
+                            //              color: $white;
+                            //         }
+                            //     }
+                            // }
+                            .drop1{
+                                left: 90px!important;
                             }
                             .drop_down{
                                 position: absolute;
                                 top: 87px;
                                 left: 41%;
                                 width: 281px;
-                                background: #d14336eb;//#f73624e3;//#f73624a6;
+                                background: $white;// #d14336eb;//#f73624e3;//#f73624a6;
                                 justify-content: flex-start;
                                 display:none;
-                                border-bottom: 3px solid #ffffffa8;
+                               // border-bottom: 3px solid #ffffffa8;
                                 border-bottom-right-radius: 5px;
                                 border-bottom-left-radius: 5px; 
-                                .list{
+                                box-shadow: 0px 3px 1px 0px #f43423cf;
+                                li{
                                     padding: 1rem 0;
-                                    margin: 0 0;
+                                    margin: 0 0!important;
                                     transition: $transition;
                                     width: 100%;
                                     text-transform: $cap;
-                                    border-bottom: 1px solid #ffffff78; 
+                                    color:#646464;
+                                    border-bottom:1px solid #c4c4c442;
+                                    &:hover{
+                                        background: $red;
+                                        color: $white!important;
+                                        transition: $transition;
+                                    }
                                   a{
-                                      color: #fff;
+                                      //#fff;
                                       padding: 0 0 0 1rem;
                                       font-size: 1em;
-                                      font-weight: 500;
+                                      font-weight: 500; 
+                                      display: inline-block;
+                                      transition: $transition;
+                                      &:hover{
+                                          color: $white!important;
+                                          transition: $transition;
+                                      }
                                   }
                                 }
                               }
                               .drop2{
-                                  //left: 0%!important;
+                                  left: 0%!important;
                                   width: 100%!important;
-                                  padding: 1rem 1rem;
+                                  padding: 0 0;
                                   display: none;
-                                  left: -63% !important;
-                                  width: 1500px !important;
-                                  .drop2_sub_wrp{
-                                    @include flex;
-                                    justify-content:flex-start;
-                                    align-items: inherit;
-                                    .list{
-                                        width: 18%;//23%;
-                                        margin: .5rem .9rem;
-                                        border-bottom: inherit!important;
-                                        .heading-btn{
-                                            @include flex;
-                                            justify-content: $between;
-                                            padding: 0 .5rem;
-                                            span{
-                                                color: $white;
-                                                font-size: 1.2em;
-                                                font-weight: bold;
-                                            }
+                                  //left: -63% !important;
+                                  //width: 1500px !important;
+                                  
+                                  .Child_drop2{
+                                       @include flex;
+                                       justify-content: $between;
+                                       align-items: inherit;
+                                       li{
+                                           margin: 0 0rem!important;
+                                           border-bottom: inherit!important;
+                                       }
+                                    //    .list1:hover .Sub_Hvr_wrp{display: none!important;} 
+                                      .Sub_Hvr_wrp2,.Sub_Hvr_wrp3,.Sub_Hvr_wrp4,.Sub_Hvr_wrp5
+                                      ,.Sub_Hvr_wrp6,.Sub_Hvr_wrp7,.Sub_Hvr_wrp8,.Sub_Hvr_wrp9{
+                                        display: none;
+                                       }
+                                       .Sub_cmn{
+                                        // height: 68vh;
+                                        width: 100%;
+                                        min-height: calc(100% );
+                                        overflow: hidden;
+                                       // border: 1px solid;
+                                        position: relative;
+                                       }
+                                       .Sub_Hvr_wrp1{
+                                        &::before{
+                                            @include imgBefore;
+                                            content: '';
+                                            width: 100%;
+                                            height: 100%;
+                                            position: absolute;
+                                            background: url(../image/hvr1.png)no-repeat;
+                                            background-size: contain;
+                                            background-position: bottom;
+                                            z-index: 0;
+                                            animation: imghvr 3s linear infinite;
                                         }
-                                        h3{
-                                            font-size: 15px;
-                                            text-transform: $upper;
-                                            letter-spacing: 1px;
-                                            word-spacing: 2px;
-                                            color: $white;
-                                            // padding: 0 0 1rem;
-                                            font-weight: bold;
-                                        }
-                                        ul{
-                                            justify-content: flex-start;
-                                            align-items: inherit;
-                                            li{
-                                                width: 100%;
-                                                margin: 0 0rem !important;
-                                                padding: .9rem 0 .9rem;
-                                                border-bottom: 1px dotted;
-                                                border-color: #ffffffa3;
-                                                display: block;
-                                                transition: $transition; 
-                                                a{
-                                                padding: 0 0 0 0rem!important;
-                                                font-size: 14px;
-                                                font-family: 'RalewayRegular';
-                                                text-transform: $cap;
-                                                cursor: pointer;
-                                                &:hover{
-                                                    transition: $transition;
-                                                    padding-left: .5rem;
-                                                    color: #000!important;
-                                                    display: inline-block;
-                                                }
-                                                }
-                                            }
-                                        }
+                                       }
+                                       .Sub_Hvr_wrp2 { 
+                                        &::before{
+                                            content: '';
+                                            width: 100%;
+                                            height: 100%;
+                                            position: absolute;
+                                            background: url(../image/hvr2.png)no-repeat;
+                                            background-size: contain;
+                                            background-position: bottom;
+                                            z-index: 0;
+                                            animation: imghvr 3s linear infinite;
+                                         } 
                                     }
+                                    .Sub_Hvr_wrp3{
+                                            &::before{
+                                                content: '';
+                                                width: 100%;
+                                                height: 100%;
+                                                position: absolute;
+                                                background: url(../image/hvr3.png)no-repeat;
+                                                background-size: contain;
+                                                background-position: bottom;
+                                                z-index: 0;
+                                                animation: imghvr 3s linear infinite;
+                                            } 
+                                         }
+                                         .Sub_Hvr_wrp4{
+                                            &::before{
+                                               @include imgBefore;
+                                            } 
+                                         }
+                                         .Sub_Hvr_wrp5{
+                                            &::before{
+                                               @include imgBefore5;
+                                            } 
+                                         }
+                                         .Sub_Hvr_wrp6{
+                                            &::before{
+                                               @include imgBefore6;
+                                            } 
+                                         }
+                                         .Sub_Hvr_wrp7{
+                                            &::before{
+                                               @include imgBefore7;
+                                            } 
+                                         }
+                                         .Sub_Hvr_wrp8{
+                                            &::before{
+                                               @include imgBefore8;
+                                            } 
+                                         }
+                                         .Sub_Hvr_wrp9{
+                                            &::before{
+                                               @include imgBefore9;
+                                            } 
+                                         }
+                                        .sub-drop01{
+                                           width: 35%;
+                                           ul{
+                                               border-right: 1px solid #a8a8a85c;
+                                               .list-active{
+                                                   background: linear-gradient(to right, #DD2615, #F73624)!important;
+                                                  cursor: pointer;
+                                                   a{
+                                                       color: $white!important;
+                                                   }
+                                               }
+                                               li {
+                                                   a{
+                                                       font-weight: bold;
+                                                       font-size: 1em;
+                                                  }
+                                               }
+                                           }
+                                        }
+                                        .sub-cmn01{ 
+                                           ul{
+                                               display: block!important;
+                                               li{
+                                                   padding: .7rem 0;
+                                                   a{
+                                                       color: #646464;//$white; 
+                                                       font-size: 15px;
+                                                   }
+                                               }
+                                           }
+                                        }
+                                        .sub-drop02{
+                                        width: 60%;
+                                        li a{
+                                            font-family: 'RalewayRegular';
+                                        }
+                                        }
                                  }
+                              }
+                              .drop4{
+                                left: 52%!important;
+                              }
+                              .drop5{
+                                left: 73%!important;
+                              }
+                              @keyframes imghvr {
+                                  0% ,100%{
+                                      transform: translateY(10px);
+                                      transition: $transition;
+                                      //filter: hue-rotate(346deg);
+                                  }
+                                  50%{
+                                    transform: translateY(0px);
+                                    transition: $transition;
+                                    filter: drop-shadow(0px 0px 2px #0000003f);
+                                  }
                               }
                         }
                     }
                 }
             }
         }
-    
+     
         //-----banner------//
         .Banner_Wrapper{
             .banner-child{
